force-app/main/default/objects/Makro_Channel_Inventory__c/Makro_Channel_Inventory__c.object-meta.xml
<CustomObject>
    <label>Makro Channel Inventory</label>
    <nameField>
        <displayFormat>MCI-{0000000}</displayFormat>
        <label>Makro Channel Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Makro Channel Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>