force-app/main/default/objects/Makro_Channel_Inventory__c/fields/article_desc__c.field-meta.xml
<CustomField>
    <fullName>article_desc__c</fullName>
    <label>article_desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>