force-app/main/default/objects/Makro_Channel_Inventory__c/fields/atp__c.field-meta.xml
<CustomField>
    <fullName>atp__c</fullName>
    <label>atp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>