force-app/main/default/objects/Makro_Channel_Inventory__c/fields/barcode__c.field-meta.xml
<CustomField>
    <fullName>barcode__c</fullName>
    <label>barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>