force-app/main/default/objects/Makro_Channel_Inventory__c/fields/bmc__c.field-meta.xml
<CustomField>
    <fullName>bmc__c</fullName>
    <label>bmc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>