force-app/main/default/objects/Makro_Channel_Inventory__c/fields/bmc_description__c.field-meta.xml
<CustomField>
    <fullName>bmc_description__c</fullName>
    <label>bmc_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>