force-app/main/default/objects/Makro_Channel_Inventory__c/fields/compo__c.field-meta.xml
<CustomField>
    <fullName>compo__c</fullName>
    <label>compo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>