force-app/main/default/objects/Makro_Channel_Inventory__c/fields/curr_ys__c.field-meta.xml
<CustomField>
    <fullName>curr_ys__c</fullName>
    <label>curr_ys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>