force-app/main/default/objects/Makro_Channel_Inventory__c/fields/datatime__c.field-meta.xml
<CustomField>
    <fullName>datatime__c</fullName>
    <label>datatime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>