force-app/main/default/objects/Makro_Channel_Inventory__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <label>end_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>