force-app/main/default/objects/Makro_Channel_Inventory__c/fields/future_promo__c.field-meta.xml
<CustomField>
    <fullName>future_promo__c</fullName>
    <label>future_promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>