force-app/main/default/objects/Makro_Channel_Inventory__c/fields/incl_sp__c.field-meta.xml
<CustomField>
    <fullName>incl_sp__c</fullName>
    <label>incl_sp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>