force-app/main/default/objects/Makro_Channel_Inventory__c/fields/list_price__c.field-meta.xml
<CustomField>
    <fullName>list_price__c</fullName>
    <label>list_price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>