force-app/main/default/objects/Makro_Channel_Inventory__c/fields/mac__c.field-meta.xml
<CustomField>
    <fullName>mac__c</fullName>
    <label>mac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>