force-app/main/default/objects/Makro_Channel_Inventory__c/fields/net_cost__c.field-meta.xml
<CustomField>
    <fullName>net_cost__c</fullName>
    <label>net_cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>