force-app/main/default/objects/Makro_Channel_Inventory__c/fields/none1__c.field-meta.xml
<CustomField>
    <fullName>none1__c</fullName>
    <label>none1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>