force-app/main/default/objects/Makro_Channel_Inventory__c/fields/order_unit__c.field-meta.xml
<CustomField>
    <fullName>order_unit__c</fullName>
    <label>order_unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>