force-app/main/default/objects/Makro_Channel_Inventory__c/fields/pbc__c.field-meta.xml
<CustomField>
    <fullName>pbc__c</fullName>
    <label>pbc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>