force-app/main/default/objects/Makro_Channel_Inventory__c/fields/planned_margin__c.field-meta.xml
<CustomField>
    <fullName>planned_margin__c</fullName>
    <label>planned_margin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>