force-app/main/default/objects/Makro_Channel_Inventory__c/fields/pr_qty__c.field-meta.xml
<CustomField>
    <fullName>pr_qty__c</fullName>
    <label>pr_qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>