force-app/main/default/objects/Makro_Channel_Inventory__c/fields/rp__c.field-meta.xml
<CustomField>
    <fullName>rp__c</fullName>
    <label>rp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>