force-app/main/default/objects/Makro_Channel_Inventory__c/fields/seq_no__c.field-meta.xml
<CustomField>
    <fullName>seq_no__c</fullName>
    <label>seq_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>