force-app/main/default/objects/Makro_Channel_Inventory__c/fields/sit__c.field-meta.xml
<CustomField>
    <fullName>sit__c</fullName>
    <label>sit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>