force-app/main/default/objects/Makro_Channel_Inventory__c/fields/site__c.field-meta.xml
<CustomField>
    <fullName>site__c</fullName>
    <label>site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>