force-app/main/default/objects/Makro_Channel_Inventory__c/fields/site_name__c.field-meta.xml
<CustomField>
    <fullName>site_name__c</fullName>
    <label>site_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>