force-app/main/default/objects/Makro_Channel_Inventory__c/fields/so_qty__c.field-meta.xml
<CustomField>
    <fullName>so_qty__c</fullName>
    <label>so_qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>