force-app/main/default/objects/Makro_Channel_Inventory__c/fields/soh__c.field-meta.xml
<CustomField>
    <fullName>soh__c</fullName>
    <label>soh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>