force-app/main/default/objects/Makro_Channel_Inventory__c/fields/soo__c.field-meta.xml
<CustomField>
    <fullName>soo__c</fullName>
    <label>soo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>