force-app/main/default/objects/Makro_Channel_Inventory__c/fields/stock_margin__c.field-meta.xml
<CustomField>
    <fullName>stock_margin__c</fullName>
    <label>stock_margin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>