force-app/main/default/objects/Makro_Channel_Inventory__c/fields/uom__c.field-meta.xml
<CustomField>
    <fullName>uom__c</fullName>
    <label>uom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>