force-app/main/default/objects/Makro_Channel_Inventory__c/fields/vendor_name__c.field-meta.xml
<CustomField>
    <fullName>vendor_name__c</fullName>
    <label>vendor_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>