force-app/main/default/objects/Makro_Channel_Inventory__c/fields/vendor_prod_code__c.field-meta.xml
<CustomField>
    <fullName>vendor_prod_code__c</fullName>
    <label>vendor_prod_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>