force-app/main/default/objects/Makro_Channel_Inventory__c/fields/week_current__c.field-meta.xml
<CustomField>
    <fullName>week_current__c</fullName>
    <label>week_current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>