force-app/main/default/objects/Makro_Channel_Inventory__c/fields/week_l1__c.field-meta.xml
<CustomField>
    <fullName>week_l1__c</fullName>
    <label>week_l1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>